# defun

./: Cargo.toml
benches/: number_benchmark.rs
defun/: Cargo.toml
defun-cli/: Cargo.toml
defun-cli/src/: lib.rs  main.rs  repl.rs
defun/src/: builtins.rs  eval.rs  expr.rs  interpreter.rs  lexer.rs  lib.rs
src/: builtins.rs  env.rs  eval.rs  expr.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
