[package]
name = "defun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.12.0"
ordered-float = "4.2.0"
tap = "1.0.1"
thiserror = "1.0.50"
variantly = "0.3.0"

[dev-dependencies]
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "number_benchmark"
harness = false

