[package]
name = "defun-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defun = {path = "../defun"}
atty = "0.2.14"
clap = { version = "4.4.7", features = ["derive"] }
rustyline = "13.0.0"
thiserror = "1.0.50"
itertools = "0.12.0"
